--- a/requirements.txt
+++ b/requirements.txt
@@ -6,32 +6,42 @@ certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
 Deprecated==1.2.14
+distlib==0.3.6
+exceptiongroup==1.1.1
+filelock==3.8.0
 Flask==2.3.2
 Flask-Caching==2.0.2
 Flask-Limiter==3.3.1
 Flask-Login==0.6.2
 Flask-Migrate==4.0.4
+Flask-Script==2.0.6
 Flask-SQLAlchemy==3.0.4
-gunicorn==20.1.0
+Flask-Testing==0.8.1
 idna==3.4
 importlib-resources==5.12.0
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 limits==3.5.0
 Mako==1.2.4
 markdown-it-py==3.0.0
-MarkupSafe==2.1.3
+MarkupSafe==2.1.1
 mdurl==0.1.2
 ordered-set==4.1.0
 packaging==23.1
+platformdirs==2.5.2
+pluggy==1.0.0
 Pygments==2.15.1
 pypng==0.20220715.0
+pytest==7.3.2
 qrcode==7.4.2
 redis==4.5.5
 requests==2.31.0
 rich==13.4.2
 SQLAlchemy==2.0.16
+tomli==2.0.1
 typing_extensions==4.6.3
 urllib3==2.0.3
+virtualenv==20.16.5
 Werkzeug==2.3.6
 wrapt==1.15.0
