--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,83 @@
-alembic==1.11.1
-async-timeout==4.0.2
-blinker==1.6.2
-cachelib==0.9.0
-certifi==2023.5.7
-charset-normalizer==3.1.0
+alembic==1.10.4
+anyio==3.6.2
+APIFlask==1.1.3
+apispec==6.0.0
+APScheduler==3.6.3
+asttokens==2.2.1
+autopep8==1.6.0
+backcall==0.2.0
+cachetools==4.2.2
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.0.1
 click==8.1.3
-Deprecated==1.2.14
+colorama==0.4.6
+comm==0.1.2
+cryptography==39.0.0
+debugpy==1.6.6
+decorator==5.1.1
 distlib==0.3.6
-exceptiongroup==1.1.1
+executing==1.2.0
 filelock==3.8.0
-Flask==2.3.2
-Flask-Caching==2.0.2
-Flask-Limiter==3.3.1
+Flask==2.1.3
+Flask-HTTPAuth==4.7.0
 Flask-Login==0.6.2
+flask-marshmallow==0.14.0
 Flask-Migrate==4.0.4
-Flask-Script==2.0.6
-Flask-SQLAlchemy==3.0.4
-Flask-Testing==0.8.1
+Flask-SQLAlchemy==2.5.1
+fpdf==1.7.2
+future==0.18.3
+greenlet==1.1.2
+gunicorn==20.1.0
+h11==0.14.0
+httpcore==0.16.3
+httpx==0.23.3
 idna==3.4
-importlib-resources==5.12.0
-iniconfig==2.0.0
+ipykernel==6.16.2
+ipython==7.23.0
 itsdangerous==2.1.2
+jedi==0.18.2
 Jinja2==3.1.2
-limits==3.5.0
+jupyter_client==7.4.9
+jupyter_core==4.12.0
 Mako==1.2.4
-markdown-it-py==3.0.0
 MarkupSafe==2.1.1
-mdurl==0.1.2
-ordered-set==4.1.0
-packaging==23.1
-platformdirs==2.5.2
-pluggy==1.0.0
-Pygments==2.15.1
+marshmallow==3.18.0
+matplotlib-inline==0.1.6
+nest-asyncio==1.5.6
+packaging==23.0
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==9.5.0
+platformdirs==2.6.2
+prompt-toolkit==3.0.36
+psutil==5.9.4
+pure-eval==0.2.2
+pycodestyle==2.8.0
+pycparser==2.21
+Pygments==2.14.0
+pyparsing==3.0.9
 pypng==0.20220715.0
-pytest==7.3.2
+python-dateutil==2.8.2
+python-telegram-bot==13.7
+pytz==2022.7.1
+pytz-deprecation-shim==0.1.0.post0
+pyzmq==25.0.0
 qrcode==7.4.2
-redis==4.5.5
-requests==2.31.0
-rich==13.4.2
-SQLAlchemy==2.0.16
-tomli==2.0.1
-typing_extensions==4.6.3
-urllib3==2.0.3
+requests==2.28.2
+rfc3986==1.5.0
+six==1.16.0
+sniffio==1.3.0
+SQLAlchemy==1.4.40
+stack-data==0.6.2
+toml==0.10.2
+tornado==6.2
+traitlets==5.8.1
+typing_extensions==4.5.0
+tzdata==2022.7
+tzlocal==4.2
+urllib3==1.26.14
 virtualenv==20.16.5
-Werkzeug==2.3.6
-wrapt==1.15.0
+wcwidth==0.2.6
+webargs==8.2.0
+Werkzeug==2.2.2
