--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,8 @@ distlib==0.3.6
 executing==1.2.0
 filelock==3.8.0
 Flask==2.1.3
+Flask-Caching==2.0.2
+Flask-Limiter==3.3.1
 Flask-HTTPAuth==4.7.0
 Flask-Login==0.6.2
 flask-marshmallow==0.14.0
