--- a/requirements.txt
+++ b/requirements.txt
@@ -66,6 +66,7 @@ pytz==2022.7.1
 pytz-deprecation-shim==0.1.0.post0
 pyzmq==25.0.0
 qrcode==7.4.2
+redis==4.5.5
 requests==2.28.2
 rfc3986==1.5.0
 six==1.16.0
