--- a/requirements.txt
+++ b/requirements.txt
@@ -60,6 +60,8 @@ pycparser==2.21
 Pygments==2.14.0
 pyparsing==3.0.9
 pypng==0.20220715.0
+pytest==7.2.2
+pytest-flask==1.2.0
 python-dateutil==2.8.2
 python-telegram-bot==13.7
 pytz==2022.7.1
