--- a/render.yaml
+++ b/render.yaml
@@ -3,4 +3,4 @@ services:
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn -w 4 -b 0.0.0.0:$PORT app:app
     env:
-      PYTHONUNBUFFERED: "true"
+      PYTHONUNBUFFERED= "true"
