--- a/requirements.txt
+++ b/requirements.txt
@@ -54,6 +54,7 @@ Pillow==9.5.0
 platformdirs==2.6.2
 prompt-toolkit==3.0.36
 psutil==5.9.4
+psycopg2-binary==2.9.6
 pure-eval==0.2.2
 pycodestyle==2.8.0
 pycparser==2.21
