--- a/requirements.txt
+++ b/requirements.txt
@@ -21,20 +21,30 @@ executing==1.2.0
 filelock==3.8.0
 Flask==2.1.3
 Flask-Caching==2.0.2
+Flask-Dance==7.0.0
 Flask-Limiter==3.3.1
 Flask-HTTPAuth==4.7.0
 Flask-Login==0.6.2
+Flask-Mail==0.9.1
 flask-marshmallow==0.14.0
 Flask-Migrate==4.0.4
 Flask-SQLAlchemy==2.5.1
 fpdf==1.7.2
 future==0.18.3
 greenlet==1.1.2
+google-api-core==2.11.1
+google-api-python-client==2.90.0
+google-auth==2.21.0
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==1.0.0
+googleapis-common-protos==1.59.1
 gunicorn==20.1.0
 h11==0.14.0
 httpcore==0.16.3
+httplib2==0.22.0
 httpx==0.23.3
 idna==3.4
+importlib-resources==5.12.0
 ipykernel==6.16.2
 ipython==7.23.0
 itsdangerous==2.1.2
@@ -47,6 +57,7 @@ MarkupSafe==2.1.1
 marshmallow==3.18.0
 matplotlib-inline==0.1.6
 nest-asyncio==1.5.6
+oauthlib==3.2.2
 packaging==23.0
 parso==0.8.3
 pickleshare==0.7.5
@@ -71,6 +82,7 @@ pyzmq==25.0.0
 qrcode==7.4.2
 redis==4.5.5
 requests==2.28.2
+requests-oauthlib==1.3.1
 rfc3986==1.5.0
 six==1.16.0
 sniffio==1.3.0
